putting it out there

--- a/ClassRoomHelper/appsettings.json
+++ b/ClassRoomHelper/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "HotMessDB": "Data Source=LAPTOP-0URSF0TJ\\HOTMESSAPPS;Initial Catalog=HotMessData;Integrated Security=True;Pooling=False"
+  }
 }
